# bevy2025

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Makefile  config.yaml  flake.nix
.claude/: settings.local.json
.github/workflows/: build_nix.yml
assets/shaders/: grass.wgsl
client/: Cargo.toml  config.yaml
client/assets/models/g-toilet/: scene.gltf
client/assets/models/tower/: stone-tower001.glb  stone-tower001.gltf
client/assets/shaders/: grass.wgsl  water.wgsl
client/src/: animations.rs  assets.rs  assets.rs.rej  camera.rs  camera.rs.rej  character_controller_client.rs  components.rs  debug.rs  game_state.rs  grass.rs  inventory.rs  login.rs  main.rs  main.rs.rej  network.rs  notification.rs  physics.rs  picking.rs  player.rs  projectile.rs  remote_players.rs  steamworks.rs  terrain.rs  ui.rs  water.rs  web.rs
client/src/network/: inventory.rs
client/src/ui/: connecting_menu.rs  empty_menu.rs  home_menu.rs  inventory_menu.rs  inventory_ui.rs  inventory_ui.rs.rej  mod.rs  mod.rs.rej  multiplayer_menu.rs  paused_menu.rs  scoreboard_menu.rs  skills_menu.rs  styles.rs  text_input.rs
client/src/ui/skills_menu/: binds.rs
server/: Cargo.toml
server/src/: animations.rs  axum.rs  chat.rs  game_manager.rs  lib.rs  main.rs  projectile.rs  spawns.rs  terrain.rs  websocket.rs
shared/: Cargo.toml  build.rs
shared/src/: animations.rs  casting.rs  character_controller.rs  damage_calc.rs  decimal.rs  event.rs  items.rs  lib.rs  lib.rs.rej  message_io.rs  net_components.rs  netlib.rs  physics.rs  player_input.rs  projectile.rs  skills.rs  stats.rs  stats2.rs
shared/src/animations/: systems.rs
shared/src/event/: client.rs  server.rs  spells.rs
shared/src/items/: diary.rs  footwear.rs
shared/src/net_components/: ents.rs  foreign.rs  groups.rs  ours.rs
shared/src/physics/: terrain.rs  water.rs
shared/src/skills/: animations.rs
src/: grass.rs  main.rs  physics.rs  terrain.rs  water.rs
web/: index.html
