[workspace]
resolver = "2"
members = [
    "client",
    "shared",
    "server",
]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (but not for our code):
[profile.dev.package."*"]
opt-level = 3

[profile.release.package.client]
opt-level = "z"
