[package]
name = "client"
version = "0.1.2"
edition = "2024"

[dependencies]
bevy = "0.17"
noise = "0.9"
fastrand = "2.0"
avian3d = "0.4.0"

bevy_asset_loader = {version = "0.24.0", features = ["3d"]}

serde = { version = "1.0.199", features = ["derive"] }
rand = "0.9.2"
message-io = { version = "0.19.0", optional = true }
shared = { path = "../shared", no-default-features = true }
server = { path = "../server", optional = true }
postcard = { version = "1.0.8", features = ["use-std", "alloc"] }

bevy-inspector-egui = { version = "0.35.0", optional = true }
clap = { version = "4.5.4", features = ["derive", "env"] }
dashmap = "6.1.0"
bevy-steamworks = { version = "0.15.0", optional = true }

raw-window-handle = { version = "0.6.2", optional = true }
wasm-bindgen = { version = "0.2.106", optional = true }
web-sys = { version = "0.3.83", optional = true, features = ["Window", "Document", "HtmlCanvasElement", "console"] }


[features]
inspector = ["dep:bevy-inspector-egui"]
singleplayer = ["dep:server"]
web = ["dep:wasm-bindgen", "dep:raw-window-handle", "dep:web-sys", "shared/web"]
steam = ["dep:bevy-steamworks", "dep:message-io", "shared/steam"]
default = ["steam"]
