[package]
name = "client"
version = "0.1.2"
edition = "2024"

[dependencies]
bevy = "0.18"
noise = "0.9"
fastrand = "2.3"
avian3d = "0.5"

bevy_asset_loader = {version = "0.25.0", features = ["3d"]}

serde = { version = "1.0.228", features = ["derive"] }
rand = "0.9.2"
message-io = { version = "0.19.0", optional = true }
shared = { path = "../shared" }
server = { path = "../server", optional = true }
postcard = { version = "1.1.3", features = ["use-std", "alloc"] }

bevy-inspector-egui = { version = "0.36.0", optional = true }
clap = { version = "4.5.54", features = ["derive", "env"] }
dashmap = "6.1.0"
arboard = { version = "3.6.1", optional = true }
bevy-steamworks = { version = "0.16.0", optional = true }

raw-window-handle = { version = "0.6.2", optional = true }
wasm-bindgen = { version = "0.2.108", optional = true }
web-sys = { version = "0.3.85", optional = true, features = [
"Window", "Document", "HtmlCanvasElement", "HtmlParagraphElement", "console",
"MessageEvent", "WebSocket", "PresentationConnection", "Blob", "ReadableStream", "ReadableStreamDefaultReader"
] }
wasm-bindgen-futures = "0.4.58"

[features]
inspector = ["dep:bevy-inspector-egui"]
singleplayer = ["dep:server"]
web = ["dep:wasm-bindgen", "dep:raw-window-handle", "dep:web-sys", "shared/web"]
udp = ["shared/udp", "dep:message-io"]
steam = ["dep:bevy-steamworks"]
clipboard = ["dep:arboard"]
default = ["steam", "udp", "clipboard"]
