[package]
name = "client"
version = "0.1.2"
edition = "2024"

[dependencies]
bevy = "0.18"
noise = "0.9"
fastrand = "2.3"
avian3d = "0.5"

bevy_asset_loader = {version = "0.25.0", features = ["3d"]}

serde = { version = "1.0.228", features = ["derive"] }
rand = "0.9.2"
message-io = { version = "0.19.0", optional = true }
shared = { path = "../shared" }
server = { path = "../server", optional = true }
postcard = { version = "1.1.3", features = ["use-std", "alloc"] }

bevy-inspector-egui = { version = "0.36.0", optional = true }
clap = { version = "4.5.57", features = ["derive", "env"] }
dashmap = "6.1.0"
arboard = { version = "3.6.1", optional = true }
bevy-steamworks = { version = "0.16.0", optional = true }

raw-window-handle = { version = "0.6.2", optional = true }
wasm-bindgen = { version = "0.2.108", optional = true }
# transitive dependency feature flag required for web: getrandom/wasm_js
getrandom = { version = "0.3.4", optional = true, features = ["wasm_js"] }
web-sys = { version = "0.3.85", optional = true, features = [
"Window", "Document", "HtmlCanvasElement", "HtmlParagraphElement", "console",
"MessageEvent", "WebSocket", "PresentationConnection", "Blob", "ReadableStream", "ReadableStreamDefaultReader"
] }
wasm-bindgen-futures = {version = "0.4.58", optional = true }
reqwest = { version = "0.13.1", default-features = false, features = ["rustls", "json"] , optional = true }
tokio = { version = "1.49.0", optional = true }
futures = { version = "0.3.31", optional = true }
serde_json = "1.0.149"

[features]
inspector = ["dep:bevy-inspector-egui"]
singleplayer = ["dep:server"]
web = ["dep:wasm-bindgen", "dep:raw-window-handle", "dep:web-sys", "shared/web", "dep:getrandom", "dep:wasm-bindgen-futures"]
udp = ["shared/udp", "dep:message-io"]
steam = ["dep:bevy-steamworks", "dep:tokio", "dep:futures", "dep:reqwest"]
clipboard = ["dep:arboard"]
default = ["steam", "udp", "clipboard"]
