[package]
name = "server"
version = "0.1.0"
authors = []
edition = "2024"

[lib]
name = "server"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies.bevy]
version = "0.18"
default-features = false
features = ["serialize", "bevy_log", "https", "bevy_asset",
"bevy_scene", "bevy_mesh", "bevy_light",
"bevy_gltf", "bevy_animation",
"bevy_state", "bevy_dev_tools"
]


[dependencies]
message-io = "0.19.0"
serde_yaml = "0.9.34"
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
once_cell = "1.21.3"
rand = "0.10.0"

phf = { version = "0.13.1", features = ["macros"] }

shared = { path = "../shared", features = ["udp", "web"] }
postcard = { version = "1.1.3", features = ["use-std", "alloc"] }
clap = { version = "4.5.58", features = ["derive"] }

noise = "0.9"
fastrand = "2.3"
avian3d = { version = "0.5.0", features = ["3d", "collider-from-mesh", "f32", "parallel", "parry-f32", "xpbd_joints", "serialize", "bevy_scene", "simd"], default-features = false }
dashmap = { version = "6.1.0", features = ["rayon"] }
rayon = "1.11.0"
tokio = { version = "1.49.0", features = ["net", "rt-multi-thread"] }
axum = "0.8.8"
tokio-tungstenite = "0.28.0"
futures-util = "0.3.32"
futures-channel = "0.3.32"

[dev-dependencies]
tungstenite = "0.28.0"
