[package] #
name = "shared"
version = "0.1.0"
authors = []
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies.bevy]
version = "0.18.0"
default-features = false
features = ["serialize"]

[dependencies]
message-io = { version = "0.19.0", optional = true }
serde_yaml = "0.9.34"
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
once_cell = "1.21.3"
rand = "0.9.2"

# Everything that server has, we also have
bevy_ecs = "0.18.0"
bevy_app = "0.18.0"
bevy_log = "0.18.0"
bevy_time = "0.18.0"
bevy_color = "0.18.0"
bevy_transform = "0.18.0"
#bevy_mesh = "0.17.3"
bevy_diagnostic = "0.18.0"

phf = { version = "0.13.1", features = ["macros"] }
postcard = { version = "1.1.3", features = ["use-std", "alloc"] }
avian3d = { version = "0.5", features = ["serialize"] }
fastrand = "2.3.0"
noise = "0.9.0"
dashmap = { version = "6.1.0", features = ["rayon"] }
rayon = "1.11.0"
#webrtc = "0.14.0"

#clap = { version = "4.5.25", features = ["derive"] }

[dev-dependencies]
tungstenite = "0.28.0"

[build-dependencies]
quote = "1.0.43"
prettyplease = "0.2.37"
regex = "1.12.2"
syn = "2.0.114"

[features]
udp = ["dep:message-io"]
web = []
default = []
